--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,11 @@
   <groupId>JaswanthBDDJava_Cucumber</groupId>
   <artifactId>JaswanthBDDJava_Cucumber</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  
+  <properties>
+    <aspectj.version>1.8.10</aspectj.version>
+</properties>
 
 <dependencies>
 
@@ -20,11 +25,7 @@
 	<version>3.141.59</version>
 </dependency>
 
-<dependency>
-	<groupId>com.relevantcodes</groupId>
-	<artifactId>extentreports</artifactId>
-	<version>2.41.2</version>
-</dependency>
+
 
 <dependency>
 	<groupId>org.apache.poi</groupId>
@@ -48,7 +49,7 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-core</artifactId>
-            <version>4.4.0</version>
+            <version>5.7.0</version>
         </dependency>
 
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-html -->
@@ -62,23 +63,30 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>4.4.0</version>
+            <version>5.7.0</version>
         </dependency>
 
     <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-testng</artifactId>
-    <version>4.2.3</version>
+    <version>5.7.0</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>4.4.0</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+
+<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-picocontainer</artifactId>
+			<version>5.7.0</version>
+			<scope>test</scope>
+		</dependency>
 
    <!-- https://mvnrepository.com/artifact/net.sourceforge.cobertura/cobertura -->
         <dependency>
@@ -95,6 +103,12 @@
             <version>1.0.6</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+        <groupId>io.qameta.allure</groupId>
+        <artifactId>allure-cucumber4-jvm</artifactId>
+        <version>2.14.0</version>
+    </dependency>
 
 <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
         <dependency>
@@ -115,16 +129,22 @@
         <dependency>
             <groupId>io.cucumber</groupId>
             <artifactId>gherkin</artifactId>
-            <version>5.1.0</version>
+            <version>13.0.0</version>
         </dependency>
 
 <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
+
+<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-expressions</artifactId>
+			<version>10.1.0</version>
+		</dependency>
 
 <dependency>
     <groupId>log4j</groupId>
@@ -133,14 +153,35 @@
 </dependency>
 
 <dependency>
+    <groupId>io.rest-assured</groupId>
+    <artifactId>rest-assured</artifactId>
+    <version>4.2.0</version>
+    <scope>test</scope>
+</dependency>
+
+<dependency>
+			<groupId>tech.grasshopper</groupId>
+			<artifactId>extentreports-cucumber5-adapter</artifactId>
+			<version>1.3.2</version>
+		</dependency>
+
+<dependency>
+
 			<groupId>com.sun</groupId>
 			<artifactId>tools</artifactId>
 			<version>1.7</version>
 			<scope>system</scope>
 			<systemPath>C:\Program Files\Java\jdk1.8.0_161\lib\tools.jar</systemPath>
 		</dependency>
+		
+		<dependency>
+			<groupId>io.github.bonigarcia</groupId>
+			<artifactId>webdrivermanager</artifactId>
+			<version>4.2.2</version>
+		</dependency>
 
 </dependencies>
+
 
 
 
@@ -154,6 +195,16 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
+            
+            <plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M3</version>
+					<configuration>
+						<includes>**/*Runner.java</includes>
+					</configuration>
+				</plugin>
+            
             <plugin>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>cobertura-maven-plugin</artifactId>
@@ -164,6 +215,9 @@
        </formats>
     </configuration>
 </plugin>
+
+      
+        
         </plugins>
     </build>
 </project>
